# rivetfuse

./: .gitignore  Cargo.toml  README.md  justfile
crates/common/src/: dir.rs  lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: main.rs
crates/gateway/src/configure/: mod.rs  server.rs  tracing.rs
crates/gateway/src/constant/: mod.rs
crates/gateway/src/error/: mod.rs
crates/gateway/src/provider/: mod.rs
crates/gateway/src/router/: mod.rs
crates/gateway/src/server/: di.rs  mod.rs  state.rs
crates/tokenizer/: Cargo.toml
crates/tokenizer/src/: lib.rs  model.rs  token.rs
settings/: base.toml.example  dev.toml.example
