[workspace]
members = [
  "crates/gateway",
  "crates/common",
]
resolver = "2"

[workspace.package]
name = "rivetfuse"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
