[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
tracing-log = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
strum = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# local crates 
common = { path = "../common"}
